--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="conference_venue">Conference Venue</string>
     <string name="conference_date">Conference Date</string>
     <string name="conference_name">Conference Name</string>
+    <string name="loading">Loading…</string>
 </resources>
