proof of payment upload

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,6 @@
     <string name="coauthor">CoAuthor</string>
     <string name="open_pdf">Open Pdf</string>
     <string name="back">Back</string>
+    <string name="open_proof_of_payment">Proof of Payment</string>
+    <string name="upload_proof_of_payment">Upload Proof of Payment</string>
 </resources>
