--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="upload_proof_of_payment">Upload Proof of Payment</string>
     <string name="abstract_submission_fee">Abstract Submission Fee in Rands e.g (5000)</string>
     <string name="attendance_fee">Attendance Fee in Rands e.g (3500)</string>
+    <string name="attendance_type">Attendance Type:</string>
 </resources>
